add component heading-section, fix component header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,37 +1,38 @@
 <header class="header">
+  <a href="#" class="header-home-link">
     <img class="header-logo" src="assets/images/logo.svg" alt="Лого" />
     <p class="header-logo-text">СМЕТНЫЙ ОФИС</p>
-    <nav>
-      <ul class="header-links">
-        <li class="header-link">
-          <a href="#" class="header-link-text">Главная</a>
-        </li>
-        <li class="header-link">
-          <a href="#" class="header-link-text"
-            >Продукты
-            <img
-              class="header-link-select"
-              src="assets/images/select.svg"
-              alt=""
-            />
-          </a>
-        </li>
-        <li class="header-link">
-          <a href="#" class="header-link-text"
-            >Данные
-            <img
-              class="header-link-select"
-              src="assets/images/select.svg"
-              alt=""
-            />
-          </a>
-        </li>
-        <li class="header-link">
-          <a href="#" class="header-link-text">Цены</a>
-        </li>
-      </ul>
-    </nav>
-    <button class="header-button-login">Логин</button>
-    <button class="header-button-register">Регистрация</button>
-
+  </a>
+  <nav>
+    <ul class="header-links">
+      <li class="header-link">
+        <a href="#" class="header-link-text">Главная</a>
+      </li>
+      <li class="header-link">
+        <a href="#" class="header-link-text"
+          >Продукты
+          <img
+            class="header-link-select"
+            src="assets/images/select.svg"
+            alt=""
+          />
+        </a>
+      </li>
+      <li class="header-link">
+        <a href="#" class="header-link-text"
+          >Данные
+          <img
+            class="header-link-select"
+            src="assets/images/select.svg"
+            alt=""
+          />
+        </a>
+      </li>
+      <li class="header-link">
+        <a href="#" class="header-link-text">Цены</a>
+      </li>
+    </ul>
+  </nav>
+  <button class="header-button-login">Логин</button>
+  <button class="header-button-register">Регистрация</button>
 </header>
