add components pricing-section and rate, fixed header and heading-section styles

--- a/src/app/heading-section/heading-section.component.html
+++ b/src/app/heading-section/heading-section.component.html
@@ -9,6 +9,6 @@
   </button>
   <button class='heading-button-registration'>Регистрация</button>
 </div>
-<img class='heading-img' src="../../assets/images/ball.png" alt="">
+<img class='heading-img' src="../../assets/images/ball.svg" alt="">
 <img class='heading-img-light'src="../../assets/images/light-accent.png" alt="">
 </section>
