--- a/src/app/heading-section/heading-section.component.scss
+++ b/src/app/heading-section/heading-section.component.scss
@@ -96,11 +96,14 @@
 
 .heading-img {
   position: absolute;
-  bottom: 0;
-  left: 140px;
+  width: 896.93px;
+  height: 1120.31px;
+  left: 320px;
+  top: -5px;
   z-index: 0;
-  opacity: 0.58;
   mix-blend-mode: color-dodge;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transform: rotate(-104.28deg);
 }
 
 .heading-img-light {
@@ -108,6 +111,5 @@
   top: -80px;
   right: 0;
   z-index: 0;
-  opacity: 0.6;
   mix-blend-mode: screen;
 }
