add component try-section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-heading-section></app-heading-section>
 <app-pricing-section></app-pricing-section>
+<app-try-section></app-try-section>
