add component quote-section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-heading-section></app-heading-section>
 <app-pricing-section></app-pricing-section>
 <app-try-section></app-try-section>
+<app-quote-section></app-quote-section>
