add component register-section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-pricing-section></app-pricing-section>
 <app-try-section></app-try-section>
 <app-quote-section></app-quote-section>
+<app-register-section></app-register-section>
