add component footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-try-section></app-try-section>
 <app-quote-section></app-quote-section>
 <app-register-section></app-register-section>
+<app-footer></app-footer>
