add registration of users, scroll from buttons

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,5 +34,5 @@
     </ul>
   </nav>
   <button class="header-button-login">Логин</button>
-  <button class="header-button-register">Регистрация</button>
+  <button (click)="scroll('form')" class="header-button-register">Регистрация</button>
 </header>
