--- a/src/app/heading-section/heading-section.component.html
+++ b/src/app/heading-section/heading-section.component.html
@@ -7,7 +7,7 @@
     <img class='heading-button-icon' src="../../assets/images/play.svg" alt="" />
     Демонстрация работы
   </button>
-  <button class='heading-button-registration'>Регистрация</button>
+  <button class='heading-button-registration' (click)="scroll('form')">Регистрация</button>
 </div>
 <img class='heading-img' src="../../assets/images/ball.svg" alt="">
 <img class='heading-img-light'src="../../assets/images/light-accent.png" alt="">
