--- a/src/app/register-section/register-section.component.scss
+++ b/src/app/register-section/register-section.component.scss
@@ -22,7 +22,7 @@
 }
 
 .register-text {
-  margin: 20px 0 32px;
+  margin: 20px 0 0;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -34,6 +34,7 @@
 }
 
 .register-input {
+  margin-top: 32px;
   box-sizing: border-box;
   padding: 12px 14px;
   width: 360px;
@@ -43,10 +44,6 @@
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   z-index: 1;
-}
-
-.register-input:first-of-type {
-  margin-bottom: 32px;
 }
 
 ::placeholder {
@@ -92,4 +89,15 @@
   bottom: -315px;
   z-index: 0;
   mix-blend-mode: screen;
+}
+
+.error {
+  color: red;
+  margin: 8px 0 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
 }
