--- a/src/app/heading-section/heading-section.component.scss
+++ b/src/app/heading-section/heading-section.component.scss
@@ -96,9 +96,9 @@
 
 .heading-img {
   position: absolute;
-  width: 896.93px;
-  height: 1120.31px;
-  left: 320px;
+  width: 62.2%;
+  // height: 1120.31px;
+  left: 22.2%;
   top: -5px;
   z-index: 0;
   mix-blend-mode: color-dodge;
