--- a/src/app/quote-section/quote-section.component.scss
+++ b/src/app/quote-section/quote-section.component.scss
@@ -1,5 +1,5 @@
 .quote {
-  padding: 96px 112px;
+  padding: 96px 7.77%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,4 +51,10 @@
   line-height: 24px;
   text-align: center;
   color: #475467;
+}
+
+@media (max-width: 900px) {
+  .quote-text {
+    font-size: 28px;
+  }
 }
