--- a/src/app/register-section/register-section.component.html
+++ b/src/app/register-section/register-section.component.html
@@ -21,6 +21,7 @@
     type="text"
     placeholder="Почта"
     formControlName="email"
+    [textMask]="{mask: emailMask}"
   />
   <p class="error" *ngIf="email.errors?.pattern && email.touched">
     Неверный формат email
