--- a/src/app/heading-section/heading-section.component.html
+++ b/src/app/heading-section/heading-section.component.html
@@ -1,14 +1,24 @@
-<section class='section'>
+<section class="section">
   <p class="heading-text-up">Простой способ заработать на сметах</p>
-  <h1 class="heading">Инновационное составление смет</h1>
+  <h1 class="heading-title">Инновационное составление смет</h1>
   <p class="heading-text-down">Работайте меньше, получайте больше</p>
   <div class="heading-group">
-  <button class='heading-button-demonstration'>
-    <img class='heading-button-icon' src="../../assets/images/play.svg" alt="" />
-    Демонстрация работы
-  </button>
-  <button class='heading-button-registration' (click)="scroll('form')">Регистрация</button>
-</div>
-<img class='heading-img' src="../../assets/images/ball.svg" alt="">
-<img class='heading-img-light'src="../../assets/images/light-accent.png" alt="">
+    <button class="heading-button-demonstration">
+      <img
+        class="heading-button-icon"
+        src="../../assets/images/play.svg"
+        alt=""
+      />
+      Демонстрация работы
+    </button>
+    <button class="heading-button-registration" (click)="scroll('form')">
+      Регистрация
+    </button>
+  </div>
+  <img class="heading-img" src="../../assets/images/ball.svg" alt="" />
+  <img
+    class="heading-img-light"
+    src="../../assets/images/light-accent.png"
+    alt=""
+  />
 </section>
