--- a/src/app/heading-section/heading-section.component.scss
+++ b/src/app/heading-section/heading-section.component.scss
@@ -15,7 +15,7 @@
   color: #e9d7fe;
 }
 
-.heading {
+.heading-title {
   position: relative;
   max-width: 768px;
   margin: 12px auto 24px;
@@ -26,7 +26,7 @@
   line-height: 90px;
   text-align: center;
   letter-spacing: -0.02em;
-  color: #ffffff;
+  color: #fff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
@@ -50,44 +50,36 @@
   margin: 48px 0 0;
 }
 
-.heading-button-demonstration {
-  margin-right: 12px;
+%button {
   padding: 16px 28px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
   line-height: 28px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.heading-button-demonstration {
+  @extend %button;
+  margin-right: 12px;
   color: #344054;
   background-color: #fff;
   border: 1px solid #d0d5dd;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  z-index: 1;
-  cursor: pointer;
 }
 
 .heading-button-registration {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 16px 28px;
-  width: 172px;
-  height: 60px;
+  @extend %button;
   background: #1513ad;
   border: 1px solid #1513ad;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  border-radius: 8px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 28px;
-  color: #ffffff;
-  z-index: 1;
-  cursor: pointer;
+  color: #fff;
 }
 
 .heading-button-icon {
@@ -97,7 +89,6 @@
 .heading-img {
   position: absolute;
   width: 62.2%;
-  // height: 1120.31px;
   left: 22.2%;
   top: -5px;
   z-index: 0;
@@ -112,4 +103,46 @@
   right: 0;
   z-index: 0;
   mix-blend-mode: screen;
+}
+
+@media (max-width: 700px) {
+  .heading-title {
+    width: 70%;
+    font-size: 42px;
+    line-height: 50px;
+  }
+}
+
+@media (max-width: 600px) {
+  .heading-group {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .heading-button-demonstration {
+    margin-right: 0;
+    margin-bottom: 12px;
+  }
+}
+
+@media (max-width: 500px) {
+
+  .section {
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
+  .heading-title {
+
+    font-size: 30px;
+  }
+
+  .heading-text-up,
+  .heading-text-down {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+
+  %button {
+    padding: 10px 12px;
+  }
 }
