--- a/src/app/pricing-section/pricing-section.component.scss
+++ b/src/app/pricing-section/pricing-section.component.scss
@@ -43,11 +43,20 @@
   display: flex;
   gap: 32px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-@media (max-width: 800px) {
-  .pricing-rate {
-    justify-content: center;
+@media (max-width: 500px) {
+  .pricing-heading {
+    font-size: 28px;
+    line-height: 34px;
   }
-
+  .pricing-text-down {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 20px;
+  }
+  .pricing {
+    padding-bottom: 40px;
+  }
 }
