--- a/src/app/rate/rate.component.scss
+++ b/src/app/rate/rate.component.scss
@@ -1,16 +1,10 @@
 .rate {
   width: 384px;
-  height: 590px;
   border: 1px solid #eaecf0;
   box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
     0px 4px 6px -2px rgba(16, 24, 40, 0.03);
   border-radius: 16px;
-  margin-right: 32px;
   box-sizing: border-box;
-}
-
-.rate:last-of-type {
-  margin-right: 0;
 }
 
 .heading-group {
@@ -98,6 +92,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
+  box-sizing: border-box;
 }
 
 .button-buy {
@@ -118,6 +113,7 @@
 
 .hr {
   border-top: 1px solid #eaecf0;
+  padding-bottom: 40px;
 }
 
 .support-text {
@@ -154,11 +150,48 @@
   margin: 0 0 0 12px;
   font-style: normal;
   font-weight: 700;
-
 }
 
 .group-text-italic {
   @extend %text;
   font-style: italic;
   font-weight: 400;
+}
+
+@media (max-width: 500px) {
+  .rate {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .heading-group,
+  .support-text,
+  .price,
+  .group {
+    margin-left: 10.3%;
+    margin-right: 10.3%;
+  }
+
+  .button-buy,
+  .button-more {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .price-value {
+    font-size: 36px;
+    line-height: 44px;
+  }
+
+  .explanation {
+    margin-left: 10.3%;
+    margin-right: 10.3%;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  // .hr {
+  //   p
+  // }
 }
