--- a/src/app/try-section/try-section.component.scss
+++ b/src/app/try-section/try-section.component.scss
@@ -85,7 +85,7 @@
   mix-blend-mode: color-dodge;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1120px) {
   .try-heading {
     margin-top: 5%;
     font-size: 30px;
@@ -93,6 +93,8 @@
 
   .try-text {
     font-size: 16px;
+    margin-right: 10px;
+    margin-bottom: 20px;
   }
 
   %button {
@@ -100,7 +102,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .try-heading,
   .try-text {
     text-align: center;
@@ -108,10 +110,13 @@
 
   .buttons-group {
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .try-group {
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .try-pic {
@@ -128,3 +133,18 @@
 
   }
 }
+
+@media (max-width: 680px) {
+  .buttons-group {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+  .try-heading,
+  .try-text {
+    margin: 16px 12%;
+  }
+}
+
