sreate folder components and move components

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
       <span class="footer-item"
         ><a class="footer-item-link" href=""
           >Отличия от программ<img
-            class='footer-item-icon'
+            class="footer-item-icon"
             src="../../assets/images/Badge.svg"
             alt="" /></a
       ></span>
@@ -66,10 +66,12 @@
     </div>
   </div>
   <div class="footer-copy">
-      <a href="#" class="footer-home-link">
-        <img class="footer-logo" src="assets/images/logo.svg" alt="Лого" />
-        <p class="footer-logo-text">СМЕТНЫЙ ОФИС</p>
-      </a>
-      <span class='footer-copyright'>© 2023 Все права защищены. Сметный офис</span>
+    <a href="#" class="footer-home-link">
+      <img class="footer-logo" src="assets/images/logo.svg" alt="Лого" />
+      <p class="footer-logo-text">СМЕТНЫЙ ОФИС</p>
+    </a>
+    <span class="footer-copyright"
+      >© 2023 Все права защищены. Сметный офис</span
+    >
   </div>
 </footer>
