--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,58 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-@font-face {
-  font-family: "Montserrat";
-  src: url("./assets/fonts/Montserrat-Bold.woff2") format("woff2"),
-    url("./assets/fonts/Montserrat-Bold.woff") format("woff"),
-    url("./assets/fonts/Montserrat-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Inter";
-  src: url("./assets/fonts/Inter-Regular.woff2") format("woff2"),
-    url("./assets/fonts/Inter-Regular.woff") format("woff"),
-    url("./assets/fonts/Inter-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Inter";
-  src: url("./assets/fonts/Inter-SemiBold.woff2") format("woff2"),
-    url("./assets/fonts/Inter-SemiBold.woff") format("woff"),
-    url("./assets/fonts/Inter-SemiBold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Inter";
-  src: url("./assets/fonts/Inter-Medium.woff2") format("woff2"),
-    url("./assets/fonts/Inter-Medium.woff") format("woff"),
-    url("./assets/fonts/Inter-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("./assets/fonts/Roboto-Bold.woff2") format("woff2"),
-    url("./assets/fonts/Roboto-Bold.woff") format("woff"),
-    url("./assets/fonts/Roboto-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("./assets/fonts/Roboto-Italic.woff2") format("woff2"),
-    url("./assets/fonts/Roboto-Italic.woff") format("woff"),
-    url("./assets/fonts/Roboto-Italic.ttf") format("truetype");
-  font-weight: normal;
-  font-style: italic;
-}
+@import 'src/assets/normalize';
+@import 'src/assets/fonts/fonts';
 
 body {
   max-width: 1440px;
