add folder with mixins and variables scss, add attr disabled to button at form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -36,8 +36,11 @@
       </ul>
     </div>
     <div class="header-buttons">
-      <button class="header-button-login">Логин</button>
-      <button (click)="scroll('form')" class="header-button-register">
+      <button class="header-button-login gradient-violet">Логин</button>
+      <button
+        (click)="scroll('form')"
+        class="header-button-register gradient-blue"
+      >
         Регистрация
       </button>
     </div>
