--- a/src/app/components/heading-section/heading-section.component.html
+++ b/src/app/components/heading-section/heading-section.component.html
@@ -3,7 +3,7 @@
   <h1 class="heading-title">Инновационное составление смет</h1>
   <p class="heading-text-down">Работайте меньше, получайте больше</p>
   <div class="heading-group">
-    <button class="heading-button-demonstration">
+    <button class="heading-button-demonstration gradient-violet">
       <img
         class="heading-button-icon"
         src="../../assets/images/play.svg"
@@ -11,7 +11,7 @@
       />
       Демонстрация работы
     </button>
-    <button class="heading-button-registration" (click)="scroll('form')">
+    <button class="heading-button-registration gradient-blue" (click)="scroll('form')">
       Регистрация
     </button>
   </div>
