--- a/src/app/components/rate/rate.component.html
+++ b/src/app/components/rate/rate.component.html
@@ -8,8 +8,8 @@
     <div class="price-time">{{ rate.time }}</div>
   </div>
   <p class="explanation">Программа с ТСН МГЭ на {{ rate.time }}</p>
-  <button class="button-buy">Приобрести тариф</button>
-  <button class="button-more">Подробнее</button>
+  <button class="button-buy gradient-blue">Приобрести тариф</button>
+  <button class="button-more gradient-violet">Подробнее</button>
   <div class="hr">
     <p class="support-text">Возможности</p>
     <div class="group">
