--- a/src/app/components/try-section/try-section.component.html
+++ b/src/app/components/try-section/try-section.component.html
@@ -7,8 +7,8 @@
       </p>
 
       <div class="buttons-group">
-        <button class="try-button-more">Подробнее</button>
-        <button class="try-button-begin">
+        <button class="try-button-more gradient-violet">Подробнее</button>
+        <button class="try-button-begin gradient-blue">
           Начать использовать Сметный офис
         </button>
       </div>
