--- a/src/app/components/try-section/try-section.component.scss
+++ b/src/app/components/try-section/try-section.component.scss
@@ -1,3 +1,6 @@
+@import "../../styles/variables";
+@import "../../styles/mixins";
+
 .try {
   margin: 25px 7.77% 0;
   position: relative;
@@ -6,7 +9,7 @@
 
 .try-group {
   display: flex;
-  background-color: #5654db;
+  background-color: $violet;
   border-radius: 24px;
   justify-content: space-between;
 }
@@ -19,7 +22,7 @@
   font-size: 36px;
   line-height: 44px;
   letter-spacing: -0.02em;
-  color: #ffffff;
+  color: $white;
 }
 
 .try-text {
@@ -29,27 +32,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
-  color: #e9d7fe;
-}
-
-%button {
-  position: relative;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 12px 20px;
-  gap: 8px;
-  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  border-radius: 8px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  cursor: pointer;
-  z-index: 2;
+  color: $pink;
 }
 
 .buttons-group {
@@ -60,16 +43,53 @@
 
 .try-button-more {
   @extend %button;
-  background: #fff;
+  padding: 12px 20px;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  z-index: 2;
+  background-size: 300% 100% !important;
+  background: $white;
   color: #344054;
   border: 1px solid #d0d5dd;
 }
 
 .try-button-begin {
   @extend %button;
+  padding: 12px 20px;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  z-index: 2;
+  background-size: 300% 100% !important;
   background: #1719dd;
   border: 1px solid #1719dd;
-  color: #fff;
+  color: $white;
+}
+
+.try-button-begin:hover {
+  @extend %hover;
+  border: none;
+}
+
+.try-button-more:hover {
+  @extend %hover;
+  color: $white;
+  border: none;
+}
+
+.try-button-begin.gradient-blue:hover {
+  @include gradientBlue;
+}
+
+.try-button-more.gradient-violet:hover {
+  @include gradientViolet;
 }
 
 .try-pic {
