--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -45,6 +45,11 @@
   line-height: 24px;
   color: #eaecf0;
   cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.footer-item-link:hover {
+  color: #e9d7fe;
 }
 
 .footer-copy {
