--- a/src/app/components/register-section/register-section.component.scss
+++ b/src/app/components/register-section/register-section.component.scss
@@ -1,10 +1,13 @@
+@import "../../styles/variables";
+@import "../../styles/mixins";
+
 .register {
   position: relative;
   padding: 96px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #5654db;
+  background-color: $violet;
   overflow: hidden;
 }
 
@@ -17,7 +20,7 @@
   line-height: 44px;
   text-align: center;
   letter-spacing: -0.02em;
-  color: #ffffff;
+  color: $white;
   z-index: 1;
 }
 
@@ -39,8 +42,8 @@
   padding: 12px 14px;
   width: 360px;
   height: 48px;
-  background: #ffffff;
-  border: 1px solid #ffffff;
+  background: $white;
+  border: 1px solid $white;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   z-index: 1;
@@ -81,6 +84,24 @@
   line-height: 24px;
   color: #ffffff;
   z-index: 1;
+  background-size: 300% 100%;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.register-button-disabled {
+  background: grey;
+}
+
+.register-button:hover {
+  @extend %hover;
+  border: none;
+}
+
+.register-button.gradient-blue:hover {
+  @include gradientBlue;
 }
 
 .register-img {
