--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -92,7 +92,6 @@
   @extend %button;
   background-color: #1719dd;
   padding: 10px 18px;
-  border-radius: 8px;
   border: none;
   font-weight: 600;
   font-size: 16px;
@@ -195,6 +194,7 @@
 .header-button-text-mobile {
   margin: 0 auto;
   @extend %button;
+  padding: 10px 18px;
   color: #101828;
   font-weight: 400;
   font-size: 28px;
