--- a/src/app/components/register-section/register-section.component.scss
+++ b/src/app/components/register-section/register-section.component.scss
@@ -74,7 +74,7 @@
   width: 360px;
   height: 48px;
   background: #1513ad;
-  border: 1px solid #1513ad;
+  border: none;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   font-family: "Inter";
@@ -82,7 +82,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
-  color: #ffffff;
+  color: $white;
   z-index: 1;
   background-size: 300% 100%;
   -moz-transition: all 0.4s ease-in-out;
@@ -97,7 +97,6 @@
 
 .register-button:hover {
   @extend %hover;
-  border: none;
 }
 
 .register-button.gradient-blue:hover {
