add alt text for images

--- a/src/app/components/heading-section/heading-section.component.html
+++ b/src/app/components/heading-section/heading-section.component.html
@@ -7,7 +7,7 @@
       <img
         class="heading-button-icon"
         src="../../assets/images/play.svg"
-        alt=""
+        alt="Изображение кнопки включения воспроизведения."
       />
       Демонстрация работы
     </button>
@@ -15,10 +15,10 @@
       Регистрация
     </button>
   </div>
-  <img class="heading-img" src="../../assets/images/ball.svg" alt="" />
+  <img class="heading-img" src="../../assets/images/ball.svg" alt="Фоновое изображение трехмерной модели шара." />
   <img
     class="heading-img-light"
     src="../../assets/images/light-accent.png"
-    alt=""
+    alt="Фоновое изображение радуги."
   />
 </section>
