--- a/src/app/components/quote-section/quote-section.component.html
+++ b/src/app/components/quote-section/quote-section.component.html
@@ -2,7 +2,7 @@
   <img
     class="quote-logo"
     src="../../assets/images/fictional-company-logo.svg"
-    alt=""
+    alt="Лого компании."
   />
   <blockquote class="quote-wrapper">
     <p class="quote-text">
@@ -11,7 +11,7 @@
     </p>
   </blockquote>
   <figcaption class="quote-caption">
-    <img src="../../assets/images/Avatar.svg" alt="Аватар пользователя" />
+    <img src="../../assets/images/Avatar.svg" alt="Аватар пользователя." />
     <p class="caption-name">Симона Ли</p>
     <p class="caption-job">Главный инженер Global Trust Investment</p>
   </figcaption>
