--- a/src/app/components/rate/rate.component.html
+++ b/src/app/components/rate/rate.component.html
@@ -13,19 +13,19 @@
   <div class="hr">
     <p class="support-text">Возможности</p>
     <div class="group">
-      <img src="../../assets/images/check-circle.svg" alt="" />
+      <img src="../../assets/images/check-circle.svg" alt="Изображение галочки." />
       <p class="group-text">
         База ТСН МГЭ <span class="group-text-italic">(56 дополнение)</span>
       </p>
     </div>
     <div class="group">
-      <img src="../../assets/images/check-circle.svg" alt="" />
+      <img src="../../assets/images/check-circle.svg" alt="Изображение галочки." />
       <p class="group-text">
         Индексы ТСН МГЭ <span class="group-text-italic">(2019 год)</span>
       </p>
     </div>
     <div class="group">
-      <img src="../../assets/images/check-circle.svg" alt="" />
+      <img src="../../assets/images/check-circle.svg" alt="Изображение галочки." />
       <p class="group-text">
         Индексы ТСН МГЭ, Глава 13
         <span class="group-text-italic">(2017 год)</span>
