--- a/src/app/components/register-section/register-section.component.html
+++ b/src/app/components/register-section/register-section.component.html
@@ -40,5 +40,5 @@
   >
     Зарегистрироваться
   </button>
-  <img class="register-img" src="../../assets/images/back_footer.svg" alt="" />
+  <img class="register-img" src="../../assets/images/back_footer.svg" alt="Фоновое изображение трехмерной модели." />
 </form>
