--- a/src/app/components/try-section/try-section.component.html
+++ b/src/app/components/try-section/try-section.component.html
@@ -13,7 +13,7 @@
         </button>
       </div>
     </div>
-    <img class="try-pic" src="../../assets/images/image-try.png" alt="" />
-    <img class="try-image" src="../../assets/images/ball1.svg" alt="" />
+    <img class="try-pic" src="../../assets/images/image-try.png" alt="Изображение дружеской обстановки в офисе." />
+    <img class="try-image" src="../../assets/images/ball1.svg" alt="Фоновое изображение трехмерной модели." />
   </div>
 </section>
